<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_near_store_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_white_grey" >

        <ImageView
            android:id="@+id/iv_store_logo"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/iv_store_logo"
            android:text="@string/tv_store_name"
            android:textSize="15sp"
            android:textColor="@color/black" />
        
        <TextView
            android:id="@+id/tv_shop_description"
            android:layout_width="200dp"
            android:layout_height="29dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="26dp"
            android:layout_toRightOf="@id/iv_store_logo"
            android:text="@string/tv_standared_price"
            android:textColor="@color/dark_grey"
           android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_standard_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="55dp"
            android:layout_toRightOf="@id/iv_store_logo"
            android:text="@string/tv_standared_price"
            android:textColor="@color/red"
            android:textSize="17sp" />
        

        <TextView
            android:id="@+id/tv_discount_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            android:layout_toRightOf="@id/tv_standard_price"
            android:text="@string/tv_discount_price"
            android:textColor="@color/dark_grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_saled_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_shop_name"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="35dp"
            android:text="@string/tv_saled_amount"
            android:textColor="@color/dark_grey"
            android:textSize="12sp" />
        
    </RelativeLayout>

</LinearLayout>