<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey" >

    <com.youno.view.TitleBarView 
        android:id="@+id/title_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <RelativeLayout
        android:id="@+id/layout_scan_order"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_white_grey" >

        <ImageView
            android:id="@+id/img_sm"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/icon_head_index_scan"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/text_smmd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/img_sm"
            android:text="@string/scan_order"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="45dp"
            android:layout_toRightOf="@id/img_sm"
            android:text="@string/scan_order_des"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/common_arror"
            android:contentDescription="@string/app_name" />
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_near"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_order_shop"
            android:textColor="@color/dark_grey"
            android:textSize="12sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_near_store"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/selector_white_green" >

        <ImageView
            android:id="@+id/img_store_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txt_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/img_store_img"
            android:text="@string/tv_store_name"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="45dp"
            android:layout_toRightOf="@id/img_store_img"
            android:text="@string/tv_shop_address"
            android:textSize="12sp" />


    </RelativeLayout>

</RelativeLayout>