<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/buttom_bar_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="@color/detail_bgColor"
        android:baselineAligned="false" >

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottombar_selector_gray"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="5dp"
                android:background="@drawable/bottom_tab_home_check"
                android:visibility="visible"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="3dp"
                android:text="@string/menu_home"
                android:textColor="@color/sky_blue"
                android:textSize="13.0dip"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottombar_selector_gray"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="5dp"
                android:background="@drawable/bottom_tab_category_normal"
                android:visibility="visible"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="3dp"
                android:text="@string/menu_category"
                android:textColor="@color/dark_grey"
                android:textSize="13.0dip"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_order"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottombar_selector_gray"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="5dp"
                android:background="@drawable/bottom_tab_order_normal"
                android:visibility="visible"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="3dp"
                android:text="@string/menu_order"
                android:textColor="@color/dark_grey"
                android:textSize="13.0dip"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_personal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bottombar_selector_gray"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="5dp"
                android:background="@drawable/bottom_tab_personal_normal"
                android:visibility="visible"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tv_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="3dp"
                android:text="@string/menu_personal"
                android:textColor="@color/dark_grey"
                android:textSize="13.0dip"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
    
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@id/buttom_bar_group"
        android:background="@color/devide_line" />
    
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whites"
        android:layout_above="@id/line" />

</RelativeLayout>